Error messages, small fixes and refactoring