@@ -1,16 +1,16 @@
 package org.example.statistics;
 
 import java.math.BigDecimal;
-import java.math.BigInteger;
 import java.math.RoundingMode;
 
 public class BigDecimalFullStatistics extends SummaryStatistics {
     private BigDecimal min;
     private BigDecimal max;
-    private BigDecimal sum = BigDecimal.ZERO;
+    private BigDecimal sum;
 
     public BigDecimalFullStatistics(String fileName) {
         super(fileName);
+        sum = BigDecimal.ZERO;
     }
 
     @Override
@@ -18,10 +18,12 @@ public class BigDecimalFullStatistics extends SummaryStatistics {
         super.updateStatistics(value);
 
         BigDecimal decimalValue = new BigDecimal(value);
-        if (min == null || decimalValue.compareTo(min) < 0)
+        if (min == null || decimalValue.compareTo(min) < 0) {
             min = decimalValue;
-        if (max == null || decimalValue.compareTo(max) > 0)
+        }
+        if (max == null || decimalValue.compareTo(max) > 0) {
             max = decimalValue;
+        }
         sum = sum.add(decimalValue);
     }
 
@@ -29,16 +31,16 @@ public class BigDecimalFullStatistics extends SummaryStatistics {
     protected String assembleStatisticsMessage() {
         BigDecimal avg = null;
 
-        if (!lineCount.equals(BigInteger.ZERO)) {
+        if (lineCount != 0) {
             avg = sum.divide(new BigDecimal(lineCount), 100, RoundingMode.HALF_UP);
         }
 
-        String additionalInfo = "min: %-20s max: %-20s sum: %-20s avg: %s".formatted(
+        return String.format("%s min: %-20s max: %-20s sum: %-20s avg: %s",
+                super.assembleStatisticsMessage(),
                 formatBigDecimal(min),
                 formatBigDecimal(max),
                 formatBigDecimal(sum),
                 formatBigDecimal(avg)
         );
-        return super.assembleStatisticsMessage() + additionalInfo;
     }
 }
